flux_sample/sample-app/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
        - image: 528163014577.dkr.ecr.ap-northeast-1.amazonaws.com/sample-app:ea2309efa9e1f3cbc94d8564d5e7f2e32e0d238f
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 80
          volumeMounts:
            - name: mount
              mountPath: '/mount'
              readOnly: true

      volumes:
        - name: mount
          emptyDir: {}
