flux_sample/sample-app/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: production
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # Security Groupを適用する場合は、以下のコメントを外してください。
    alb.ingress.kubernetes.io/security-groups: alb, internal
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: 'true'
spec:
  defaultBackend:
    service:
      name: service
      port:
        number: 80

  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
